--- a/index.html
+++ b/index.html
@@ -24,34 +24,65 @@
 
     <main>
 
-        <section id="section-pizzas">
+        <section id="section-cardapio">
+
+            <h2>Pizzas</h2>
 
             <section class="itens">
                 <h2 class="nome-itens">Pizza Calabresa</h2>
-                <img class="img-itens" src="images/PizzaCalabresa.png" alt="">
+                <img class="img-itens" src="images/PizzaCalabresa.png" alt="Pizza de Calabresa">
                 <p class="preço-itens">R$ 19,99</p>
-                <button class="bnt-comprar-itens">Fazer Pedido</button>
+                <a href="https://wa.me//5551980516606?text=Quero%20pedir%20uma%20pizza%20de%20Calabresa" target="_blank"><button class="bnt-comprar-itens">Fazer Pedido</button></a>
             </section>
 
             <section class="itens">
                 <h2 class="nome-itens">Pizza Portuguesa</h2>
-                <img class="img-itens" src="images/PizzaN.png" alt="">
+                <img class="img-itens" src="images/PizzaN.png" alt="Pizza Portuguesa">
                 <p class="preço-itens">R$ 22,00</p>
-                <button class="bnt-comprar-itens">Fazer Pedido</button>
+                <a href="https://wa.me//5551980516606?text=Quero%20pedir%20uma%20pizza%20Portuguesa" target="_blank"><button class="bnt-comprar-itens">Fazer Pedido</button></a>
             </section>
 
             <section class="itens">
                 <h2 class="nome-itens">Pizza Queijo</h2>
-                <img class="img-itens" src="images/PizzaQueijo.png" alt="">
+                <img class="img-itens" src="images/PizzaQueijo.png" alt="Pizza de Queijo">
                 <p class="preço-itens">R$ 25,00</p>
-                <button class="bnt-comprar-itens">Fazer Pedido</button>
+                <a href="https://wa.me//5551980516606?text=Quero%20pedir%20uma%20pizza%20de%20Queijo" target="_blank"><button class="bnt-comprar-itens">Fazer Pedido</button></a>
             </section>
 
             <section class="itens">
                 <h2 class="nome-itens">Pizza Clássica</h2>
-                <img class="img-itens" src="images/PizzaNew.png" alt="">
+                <img class="img-itens" src="images/PizzaNew.png" alt="Pizza Clássica">
                 <p class="preço-itens">R$ 30,00</p>
-                <button class="bnt-comprar-itens">Fazer Pedido</button>
+                <a href="https://wa.me//5551980516606?text=Quero%20pedir%20uma%20pizza%20Clássica" target="_blank"><button class="bnt-comprar-itens">Fazer Pedido</button></a>
+            </section>
+
+        </section>
+
+        <section id="section-cardapio">
+
+            <h2>Bebidas</h2>
+
+            <section class="itens">
+                <h2 class="nome-itens">Coca-Cola 2L</h2>
+                <img class="img-itens" src="images/CocaCola.png" alt="Refri Coca-Cola">
+                <p class="preço-itens">R$ 9,99</p>
+                <a href="https://wa.me//5551980516606?text=Quero%20pedir%20um%20refrigerante%20Coca-Cola%202L" target="_blank"><button class="bnt-comprar-itens">Fazer Pedido</button></a>
+            </section>
+
+            <section class="itens">
+                <h2 class="nome-itens">Cerveja Kaiser</h2>
+                <img class="img-itens" src="images/Kaiser.webp" alt="Cerveja Kaiser">
+                <p class="preço-itens">R$ 5,00</p>
+                <a href="https://wa.me//5551980516606?text=Quero%20pedir%20uma%20cerveja%20Kaiser%20Latão" target="_blank"><button class="bnt-comprar-itens">Fazer Pedido</button></a>
+            </section>
+
+            <section class="itens">
+                <h2 class="nome-itens">Suco DellValle 2L</h2>
+                <img class="img-itens" src="images/DellValle.png" alt="Suco DellValle">
+                <p class="preço-itens">R$ 12,00</p>
+                <a href="https://wa.me//5551980516606?text=Quero%20pedir%20um%20suco%20DellValle%20 2L" target="_blank"><button class="bnt-comprar-itens">Fazer Pedido</button></a>
+            </section>
+
             </section>
 
         </section>
