--- a/index.html
+++ b/index.html
@@ -14,17 +14,16 @@
 
         <nav>
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Pizzas</a></li>
-                <li><a href="">Bebidas</a></li>
-                <li><a href="">Promoções</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#section-cardapio">Pizzas</a></li>
+                <li><a href="#section-cardapio-bebidas">Bebidas</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
 
-        <section id="section-cardapio">
+        <section id="section-cardapio-pizza">
 
             <h2>Pizzas</h2>
 
@@ -58,14 +57,14 @@
 
         </section>
 
-        <section id="section-cardapio">
+        <section id="section-cardapio-bebidas">
 
             <h2>Bebidas</h2>
 
             <section class="itens">
                 <h2 class="nome-itens">Coca-Cola 2L</h2>
                 <img class="img-itens" src="images/CocaCola.png" alt="Refri Coca-Cola">
-                <p class="preço-itens">R$ 9,99</p>
+                <p class="preço-itens">R$ 8,00</p>
                 <a href="https://wa.me//5551980516606?text=Quero%20pedir%20um%20refrigerante%20Coca-Cola%202L" target="_blank"><button class="bnt-comprar-itens">Fazer Pedido</button></a>
             </section>
 
@@ -77,7 +76,7 @@
             </section>
 
             <section class="itens">
-                <h2 class="nome-itens">Suco DellValle 2L</h2>
+                <h2 class="nome-itens">DellValle 2L</h2>
                 <img class="img-itens" src="images/DellValle.png" alt="Suco DellValle">
                 <p class="preço-itens">R$ 12,00</p>
                 <a href="https://wa.me//5551980516606?text=Quero%20pedir%20um%20suco%20DellValle%20 2L" target="_blank"><button class="bnt-comprar-itens">Fazer Pedido</button></a>
