--- a/html/endereco.html
+++ b/html/endereco.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Napoli Pizzaria - A melhor pizza da cidade. Faça seu pedido online e experimente o sabor irresistível!">
     <title>Napoli Pizzaria</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
@@ -11,11 +10,6 @@
     <header>
 
         <h1>Napoli Pizzaria</h1>
-
-            <a href="https://wa.me//5551980516606?text=Quero%20fazer%20um%20pedido" class="maps" target="_blank">
-                <img src="images/icon-phone.png" class="maps" alt="WhatsApp">
-            </a>
-
         <p>A Melhor Pizza da Cidade!</p>
 
         <nav>
@@ -23,6 +17,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#section-cardapio">Pizzas</a></li>
                 <li><a href="#section-cardapio-bebidas">Bebidas</a></li>
+                <li><a href="html/endereco.html"></a>Endereço</li>
             </ul>
         </nav>
     </header>
@@ -55,10 +50,10 @@
             </section>
 
             <section class="itens">
-                <h2 class="nome-itens">Pizza Margherita</h2>
-                <img class="img-itens" src="images/PizzaNew.png" alt="Pizza Margherita">
+                <h2 class="nome-itens">Pizza Clássica</h2>
+                <img class="img-itens" src="images/PizzaNew.png" alt="Pizza Clássica">
                 <p class="preço-itens">R$ 30,00</p>
-                <a href="https://wa.me//5551980516606?text=Quero%20pedir%20uma%20pizza%20Margherita" target="_blank"><button class="bnt-comprar-itens">Fazer Pedido</button></a>
+                <a href="https://wa.me//5551980516606?text=Quero%20pedir%20uma%20pizza%20Clássica" target="_blank"><button class="bnt-comprar-itens">Fazer Pedido</button></a>
             </section>
 
         </section>
@@ -66,6 +61,13 @@
         <section id="section-cardapio-bebidas">
 
             <h2>Bebidas</h2>
+
+            <section class="itens">
+                <h2 class="nome-itens">Coca-Cola 2L</h2>
+                <img class="img-itens" src="images/CocaCola.png" alt="Refri Coca-Cola">
+                <p class="preço-itens">R$ 8,00</p>
+                <a href="https://wa.me//5551980516606?text=Quero%20pedir%20um%20refrigerante%20Coca-Cola%202L" target="_blank"><button class="bnt-comprar-itens">Fazer Pedido</button></a>
+            </section>
 
             <section class="itens">
                 <h2 class="nome-itens">Cerveja Kaiser</h2>
